# go-routesapi/models/model_workload_routing_rules_response.go
@@ -1,0 +1,126 @@
+/*
+Signadot Routes API
+
+The Routes API provides access to in-cluster routing configuration set up by  the Signadot Operator. 
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package models
+
+import (
+	"encoding/json"
+)
+
+// checks if the WorkloadRoutingRulesResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &WorkloadRoutingRulesResponse{}
+
+// WorkloadRoutingRulesResponse A GetWorkloadRoutingRulesResponse gives the set of WorkloadRoutingRules which match a given WorkloadRoutingRulesRequest.
+type WorkloadRoutingRulesResponse struct {
+	Routes []WorkloadRoutingRule `json:"routes,omitempty"`
+}
+
+// NewWorkloadRoutingRulesResponse instantiates a new WorkloadRoutingRulesResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewWorkloadRoutingRulesResponse() *WorkloadRoutingRulesResponse {
+	this := WorkloadRoutingRulesResponse{}
+	return &this
+}
+
+// NewWorkloadRoutingRulesResponseWithDefaults instantiates a new WorkloadRoutingRulesResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewWorkloadRoutingRulesResponseWithDefaults() *WorkloadRoutingRulesResponse {
+	this := WorkloadRoutingRulesResponse{}
+	return &this
+}
+
+// GetRoutes returns the Routes field value if set, zero value otherwise.
+func (o *WorkloadRoutingRulesResponse) GetRoutes() []WorkloadRoutingRule {
+	if o == nil || IsNil(o.Routes) {
+		var ret []WorkloadRoutingRule
+		return ret
+	}
+	return o.Routes
+}
+
+// GetRoutesOk returns a tuple with the Routes field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *WorkloadRoutingRulesResponse) GetRoutesOk() ([]WorkloadRoutingRule, bool) {
+	if o == nil || IsNil(o.Routes) {
+		return nil, false
+	}
+	return o.Routes, true
+}
+
+// HasRoutes returns a boolean if a field has been set.
+func (o *WorkloadRoutingRulesResponse) HasRoutes() bool {
+	if o != nil && !IsNil(o.Routes) {
+		return true
+	}
+
+	return false
+}
+
+// SetRoutes gets a reference to the given []WorkloadRoutingRule and assigns it to the Routes field.
+func (o *WorkloadRoutingRulesResponse) SetRoutes(v []WorkloadRoutingRule) {
+	o.Routes = v
+}
+
+func (o WorkloadRoutingRulesResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o WorkloadRoutingRulesResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Routes) {
+		toSerialize["routes"] = o.Routes
+	}
+	return toSerialize, nil
+}
+
+type NullableWorkloadRoutingRulesResponse struct {
+	value *WorkloadRoutingRulesResponse
+	isSet bool
+}
+
+func (v NullableWorkloadRoutingRulesResponse) Get() *WorkloadRoutingRulesResponse {
+	return v.value
+}
+
+func (v *NullableWorkloadRoutingRulesResponse) Set(val *WorkloadRoutingRulesResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableWorkloadRoutingRulesResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableWorkloadRoutingRulesResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableWorkloadRoutingRulesResponse(val *WorkloadRoutingRulesResponse) *NullableWorkloadRoutingRulesResponse {
+	return &NullableWorkloadRoutingRulesResponse{value: val, isSet: true}
+}
+
+func (v NullableWorkloadRoutingRulesResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableWorkloadRoutingRulesResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
