# go-routesapi/routes_grpc.pb.go
@@ -1,8 +1,4 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.12.4
-// source: routes.proto
 
 package routesapi
 
@@ -22,16 +18,18 @@ const _ = grpc.SupportPackageIsVersion7
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type RoutesClient interface {
-	// GetWorkloadRoutes returns a destinationSandbox and mappings for each
-	// combination of baseline workload and routing key. Each request query
-	// parameter represents a different filter on the set of routes returned.
+	// GetWorkloadRoutingRules returns a set of WorkloadRoutingRules, keyed by
+	// baseline workload and routing key, each of which contqains a
+	// destinationSandbox and mappings for each port.  Each request query
+	// parameter represents a different filter on the set of returned routing
+	// rules.
 	//
-	// In the response, for each returned `baseline` workload, the
+	// In the response, for each returned `WorkloadRoutingRule`, the
 	// `destinationSandbox` represents the override destination to which traffic
-	// will be routed to instead in the presence of the routing key
+	// will be routed in the presence of the associated routing key
 	// (https://www.signadot.com/docs/context-propagation). Message queue
-	// consumers may use this field to discover if a message is intended for their
-	// consumption.
+	// consumers may use this field to discover if a message is intended for
+	// their consumption.
 	//
 	// `mappings` provide the association between baseline workload ports and
 	// corresponding TCP addresses belonging to the `destinationSandbox`. The
@@ -39,10 +37,11 @@ type RoutesClient interface {
 	// (https://www.signadot.com/docs/request-routing/devmesh) to implement
 	// "Destination Routing", and may not be relevant to clients unless they are
 	// implementing request routing in the application layer.
-	GetWorkloadRoutes(ctx context.Context, in *WorkloadRoutesRequest, opts ...grpc.CallOption) (*GetWorkloadRoutesResponse, error)
-	// WatchWorkloadRoutes is a reactive version of GetWorkloadRoutes that
-	// provides a stream of WorkloadRoute modifications in near real-time.
-	WatchWorkloadRoutes(ctx context.Context, in *WorkloadRoutesRequest, opts ...grpc.CallOption) (Routes_WatchWorkloadRoutesClient, error)
+	GetWorkloadRoutingRules(ctx context.Context, in *WorkloadRoutingRulesRequest, opts ...grpc.CallOption) (*GetWorkloadRoutingRulesResponse, error)
+	// WatchWorkloadRoutingRules is a reactive version of GetWorkloadRoutingRules
+	// that provides a stream of modifications to the set of WorkloadRoutingRules
+	// (keyed by the pair baseline, routingKey), in near real-time.
+	WatchWorkloadRoutingRules(ctx context.Context, in *WorkloadRoutingRulesRequest, opts ...grpc.CallOption) (Routes_WatchWorkloadRoutingRulesClient, error)
 }
 
 type routesClient struct {
@@ -53,21 +52,21 @@ func NewRoutesClient(cc grpc.ClientConnInterface) RoutesClient {
 	return &routesClient{cc}
 }
 
-func (c *routesClient) GetWorkloadRoutes(ctx context.Context, in *WorkloadRoutesRequest, opts ...grpc.CallOption) (*GetWorkloadRoutesResponse, error) {
-	out := new(GetWorkloadRoutesResponse)
-	err := c.cc.Invoke(ctx, "/routes.Routes/GetWorkloadRoutes", in, out, opts...)
+func (c *routesClient) GetWorkloadRoutingRules(ctx context.Context, in *WorkloadRoutingRulesRequest, opts ...grpc.CallOption) (*GetWorkloadRoutingRulesResponse, error) {
+	out := new(GetWorkloadRoutingRulesResponse)
+	err := c.cc.Invoke(ctx, "/routes.Routes/GetWorkloadRoutingRules", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *routesClient) WatchWorkloadRoutes(ctx context.Context, in *WorkloadRoutesRequest, opts ...grpc.CallOption) (Routes_WatchWorkloadRoutesClient, error) {
-	stream, err := c.cc.NewStream(ctx, &Routes_ServiceDesc.Streams[0], "/routes.Routes/WatchWorkloadRoutes", opts...)
+func (c *routesClient) WatchWorkloadRoutingRules(ctx context.Context, in *WorkloadRoutingRulesRequest, opts ...grpc.CallOption) (Routes_WatchWorkloadRoutingRulesClient, error) {
+	stream, err := c.cc.NewStream(ctx, &Routes_ServiceDesc.Streams[0], "/routes.Routes/WatchWorkloadRoutingRules", opts...)
 	if err != nil {
 		return nil, err
 	}
-	x := &routesWatchWorkloadRoutesClient{stream}
+	x := &routesWatchWorkloadRoutingRulesClient{stream}
 	if err := x.ClientStream.SendMsg(in); err != nil {
 		return nil, err
 	}
@@ -77,17 +76,17 @@ func (c *routesClient) WatchWorkloadRoutes(ctx context.Context, in *WorkloadRout
 	return x, nil
 }
 
-type Routes_WatchWorkloadRoutesClient interface {
-	Recv() (*WorkloadRouteOp, error)
+type Routes_WatchWorkloadRoutingRulesClient interface {
+	Recv() (*WorkloadRoutingRuleOp, error)
 	grpc.ClientStream
 }
 
-type routesWatchWorkloadRoutesClient struct {
+type routesWatchWorkloadRoutingRulesClient struct {
 	grpc.ClientStream
 }
 
-func (x *routesWatchWorkloadRoutesClient) Recv() (*WorkloadRouteOp, error) {
-	m := new(WorkloadRouteOp)
+func (x *routesWatchWorkloadRoutingRulesClient) Recv() (*WorkloadRoutingRuleOp, error) {
+	m := new(WorkloadRoutingRuleOp)
 	if err := x.ClientStream.RecvMsg(m); err != nil {
 		return nil, err
 	}
@@ -98,16 +97,18 @@ func (x *routesWatchWorkloadRoutesClient) Recv() (*WorkloadRouteOp, error) {
 // All implementations must embed UnimplementedRoutesServer
 // for forward compatibility
 type RoutesServer interface {
-	// GetWorkloadRoutes returns a destinationSandbox and mappings for each
-	// combination of baseline workload and routing key. Each request query
-	// parameter represents a different filter on the set of routes returned.
+	// GetWorkloadRoutingRules returns a set of WorkloadRoutingRules, keyed by
+	// baseline workload and routing key, each of which contqains a
+	// destinationSandbox and mappings for each port.  Each request query
+	// parameter represents a different filter on the set of returned routing
+	// rules.
 	//
-	// In the response, for each returned `baseline` workload, the
+	// In the response, for each returned `WorkloadRoutingRule`, the
 	// `destinationSandbox` represents the override destination to which traffic
-	// will be routed to instead in the presence of the routing key
+	// will be routed in the presence of the associated routing key
 	// (https://www.signadot.com/docs/context-propagation). Message queue
-	// consumers may use this field to discover if a message is intended for their
-	// consumption.
+	// consumers may use this field to discover if a message is intended for
+	// their consumption.
 	//
 	// `mappings` provide the association between baseline workload ports and
 	// corresponding TCP addresses belonging to the `destinationSandbox`. The
@@ -115,10 +116,11 @@ type RoutesServer interface {
 	// (https://www.signadot.com/docs/request-routing/devmesh) to implement
 	// "Destination Routing", and may not be relevant to clients unless they are
 	// implementing request routing in the application layer.
-	GetWorkloadRoutes(context.Context, *WorkloadRoutesRequest) (*GetWorkloadRoutesResponse, error)
-	// WatchWorkloadRoutes is a reactive version of GetWorkloadRoutes that
-	// provides a stream of WorkloadRoute modifications in near real-time.
-	WatchWorkloadRoutes(*WorkloadRoutesRequest, Routes_WatchWorkloadRoutesServer) error
+	GetWorkloadRoutingRules(context.Context, *WorkloadRoutingRulesRequest) (*GetWorkloadRoutingRulesResponse, error)
+	// WatchWorkloadRoutingRules is a reactive version of GetWorkloadRoutingRules
+	// that provides a stream of modifications to the set of WorkloadRoutingRules
+	// (keyed by the pair baseline, routingKey), in near real-time.
+	WatchWorkloadRoutingRules(*WorkloadRoutingRulesRequest, Routes_WatchWorkloadRoutingRulesServer) error
 	mustEmbedUnimplementedRoutesServer()
 }
 
@@ -126,11 +128,11 @@ type RoutesServer interface {
 type UnimplementedRoutesServer struct {
 }
 
-func (UnimplementedRoutesServer) GetWorkloadRoutes(context.Context, *WorkloadRoutesRequest) (*GetWorkloadRoutesResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetWorkloadRoutes not implemented")
+func (UnimplementedRoutesServer) GetWorkloadRoutingRules(context.Context, *WorkloadRoutingRulesRequest) (*GetWorkloadRoutingRulesResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetWorkloadRoutingRules not implemented")
 }
-func (UnimplementedRoutesServer) WatchWorkloadRoutes(*WorkloadRoutesRequest, Routes_WatchWorkloadRoutesServer) error {
-	return status.Errorf(codes.Unimplemented, "method WatchWorkloadRoutes not implemented")
+func (UnimplementedRoutesServer) WatchWorkloadRoutingRules(*WorkloadRoutingRulesRequest, Routes_WatchWorkloadRoutingRulesServer) error {
+	return status.Errorf(codes.Unimplemented, "method WatchWorkloadRoutingRules not implemented")
 }
 func (UnimplementedRoutesServer) mustEmbedUnimplementedRoutesServer() {}
 
@@ -145,42 +147,42 @@ func RegisterRoutesServer(s grpc.ServiceRegistrar, srv RoutesServer) {
 	s.RegisterService(&Routes_ServiceDesc, srv)
 }
 
-func _Routes_GetWorkloadRoutes_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(WorkloadRoutesRequest)
+func _Routes_GetWorkloadRoutingRules_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(WorkloadRoutingRulesRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(RoutesServer).GetWorkloadRoutes(ctx, in)
+		return srv.(RoutesServer).GetWorkloadRoutingRules(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/routes.Routes/GetWorkloadRoutes",
+		FullMethod: "/routes.Routes/GetWorkloadRoutingRules",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(RoutesServer).GetWorkloadRoutes(ctx, req.(*WorkloadRoutesRequest))
+		return srv.(RoutesServer).GetWorkloadRoutingRules(ctx, req.(*WorkloadRoutingRulesRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Routes_WatchWorkloadRoutes_Handler(srv interface{}, stream grpc.ServerStream) error {
-	m := new(WorkloadRoutesRequest)
+func _Routes_WatchWorkloadRoutingRules_Handler(srv interface{}, stream grpc.ServerStream) error {
+	m := new(WorkloadRoutingRulesRequest)
 	if err := stream.RecvMsg(m); err != nil {
 		return err
 	}
-	return srv.(RoutesServer).WatchWorkloadRoutes(m, &routesWatchWorkloadRoutesServer{stream})
+	return srv.(RoutesServer).WatchWorkloadRoutingRules(m, &routesWatchWorkloadRoutingRulesServer{stream})
 }
 
-type Routes_WatchWorkloadRoutesServer interface {
-	Send(*WorkloadRouteOp) error
+type Routes_WatchWorkloadRoutingRulesServer interface {
+	Send(*WorkloadRoutingRuleOp) error
 	grpc.ServerStream
 }
 
-type routesWatchWorkloadRoutesServer struct {
+type routesWatchWorkloadRoutingRulesServer struct {
 	grpc.ServerStream
 }
 
-func (x *routesWatchWorkloadRoutesServer) Send(m *WorkloadRouteOp) error {
+func (x *routesWatchWorkloadRoutingRulesServer) Send(m *WorkloadRoutingRuleOp) error {
 	return x.ServerStream.SendMsg(m)
 }
 
@@ -192,14 +194,14 @@ var Routes_ServiceDesc = grpc.ServiceDesc{
 	HandlerType: (*RoutesServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
-			MethodName: "GetWorkloadRoutes",
-			Handler:    _Routes_GetWorkloadRoutes_Handler,
+			MethodName: "GetWorkloadRoutingRules",
+			Handler:    _Routes_GetWorkloadRoutingRules_Handler,
 		},
 	},
 	Streams: []grpc.StreamDesc{
 		{
-			StreamName:    "WatchWorkloadRoutes",
-			Handler:       _Routes_WatchWorkloadRoutes_Handler,
+			StreamName:    "WatchWorkloadRoutingRules",
+			Handler:       _Routes_WatchWorkloadRoutingRules_Handler,
 			ServerStreams: true,
 		},
 	},
